# doom-fire

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  run.sh
include/: console.h  fire.h
src/: console.cpp  fire.cpp  main.cpp
